--- a/scripts/screenshot.config.json
+++ b/scripts/screenshot.config.json
@@ -1,16 +1,12 @@
 {
   "uris": {
-    "layout-card-grid--one-per-row": "http://localhost:6006/iframe.html?id=layout-card-grid--one-per-row",
-    "layout-card-grid--two-per-row": "http://localhost:6006/iframe.html?id=layout-card-grid--two-per-row",
-    "layout-card-grid--three-per-row": "http://localhost:6006/iframe.html?id=layout-card-grid--three-per-row",
-    "layout-card-grid--four-per-row": "http://localhost:6006/iframe.html?id=layout-card-grid--four-per-row",
     "layout-container--container": "http://localhost:6006/iframe.html?id=layout-container--container",
-    "layout-sections--sections": "http://localhost:6006/iframe.html?id=layout-sections--sections",
     "layout-page-layouts-sidebar--sidebar": "http://localhost:6006/iframe.html?id=layout-page-layouts-sidebar--sidebar",
-    "components-section--section": "http://localhost:6006/iframe.html?id=components-section--section",
-    "components-components-section--shaded": "http://localhost:6006/iframe.html?id=components-section--shaded",
-    "components-section--container": "http://localhost:6006/iframe.html?id=components-section--container",
-    "components-section--shaded-container": "http://localhost:6006/iframe.html?id=components-section--shaded-container",
+    "layout-page-layouts-sidebar--local-nav-example": "http://localhost:6006/iframe.html?id=layout-page-layouts-sidebar--local-nav-example",
+    "layout-card-grid--card-grid": "http://localhost:6006/iframe.html?id=layout-card-grid--card-grid",
+    "layout-card-grid--cards-example": "http://localhost:6006/iframe.html?id=layout-card-grid--cards-examplee",
+    "layout-card-grid--panes-example": "http://localhost:6006/iframe.html?id=layout-card-grid--panes-example",
+    "layout-card-grid--story-card-example": "http://localhost:6006/iframe.html?id=layout-card-grid--story-card-example",
     "components-body-elements--title": "http://localhost:6006/iframe.html?id=components-body-elements--title",
     "components-body-elements--header": "http://localhost:6006/iframe.html?id=components-body-elements--header",
     "components-body-elements--text-block": "http://localhost:6006/iframe.html?id=components-body-elements--text-block",
@@ -26,6 +22,11 @@
     "components-body-utilities--background-colour-utils": "http://localhost:6006/iframe.html?id=components-body-utilities--background-colour-utils",
     "components-body-utilities--visibility-utils": "http://localhost:6006/iframe.html?id=components-body-utilities--visibility-utils",
     "components-navigation-local-nav--local-nav": "http://localhost:6006/iframe.html?id=components-navigation-local-nav--local-nav",
+    "components-section--section": "http://localhost:6006/iframe.html?id=components-section--section",
+    "components-section--shaded": "http://localhost:6006/iframe.html?id=components-section--shaded",
+    "components-section--container": "http://localhost:6006/iframe.html?id=components-section--container",
+    "components-section--shaded-container": "http://localhost:6006/iframe.html?id=components-section--shaded-container",
+    "components-section--no-margin": "http://localhost:6006/iframe.html?id=components-section--no-margin",
     "components-accordion--using-divs": "http://localhost:6006/iframe.html?id=components-accordion--using-divs",
     "components-accordion--using-listsr": "http://localhost:6006/iframe.html?id=components-accordion--using-lists",
     "components-accordion--has-subtitle": "http://localhost:6006/iframe.html?id=components-accordion--has-subtitle",
@@ -48,34 +49,27 @@
     "components-blockquote--blockquote": "http://localhost:6006/iframe.html?id=components-blockquote--blockquote",
     "components-blockquote--blockquote-light": "http://localhost:6006/iframe.html?id=components-blockquote--blockquote-light",
     "components-breadcrumb--breadcrumb": "http://localhost:6006/iframe.html?id=components-breadcrumb--breadcrumb",
-    "components-button--primary": "http://localhost:6006/iframe.html?id=components-button--primary",
-    "components-button--secondary": "http://localhost:6006/iframe.html?id=components-button--secondary",
-    "components-button--secondary-light": "http://localhost:6006/iframe.html?id=components-button--secondary-light",
-    "components-button--purple": "http://localhost:6006/iframe.html?id=components-button--purple",
-    "components-button--expand": "http://localhost:6006/iframe.html?id=components-button--expand",
-    "components-button--size": "http://localhost:6006/iframe.html?id=components-button--size",
-    "components-cards--default-card": "http://localhost:6006/iframe.html?id=components-cards--default-card",
-    "components-cards--default-card-with-link": "http://localhost:6006/iframe.html?id=components-cards--default-card-with-link",
-    "components-cards--default-card-no-image": "http://localhost:6006/iframe.html?id=components-cards--default-card-no-image",
-    "components-cards--default-card-no-image-shaded": "http://localhost:6006/iframe.html?id=components-cards--default-card-no-image-shaded",
-    "components-cards--default-card-no-image-button": "http://localhost:6006/iframe.html?id=components-cards--default-card-no-image-button",
-    "components-cards--default-card-no-image-button-shaded": "http://localhost:6006/iframe.html?id=components-cards--default-card-no-image-button-shaded",
-    "components-cards--default-card-image": "http://localhost:6006/iframe.html?id=components-cards--default-card-image",
-    "components-cards--default-card-image-button": "http://localhost:6006/iframe.html?id=components-cards--default-card-image-button",
-    "components-cards--default-card-1-col": "http://localhost:6006/iframe.html?id=components-cards--default-card-1-col",
-    "components-cards--default-card-2-col": "http://localhost:6006/iframe.html?id=components-cards--default-card-2-col",
-    "components-cards--default-card-3-col": "http://localhost:6006/iframe.html?id=components-cards--default-card-3-col",
-    "components-cards--default-card-4-col": "http://localhost:6006/iframe.html?id=components-cards--default-card-4-col",
-    "components-cards--story-card": "http://localhost:6006/iframe.html?id=components-cards--story-card",
-    "components-cards--story-card-1-col": "http://localhost:6006/iframe.html?id=components-cards--story-card-1-col",
-    "components-cards--story-card-2-col": "http://localhost:6006/iframe.html?id=components-cards--story-card-2-col",
-    "components-cards--story-card-3-col": "http://localhost:6006/iframe.html?id=components-cards--story-card-3-col",
-    "components-cards--story-card-4-col": "http://localhost:6006/iframe.html?id=components-cards--story-card-4-col",
-    "components-cards--event-card": "http://localhost:6006/iframe.html?id=components-cards--event-card",
-    "components-cards--event-card-1-col": "http://localhost:6006/iframe.html?id=components-cards--event-card-1-col",
-    "components-cards--event-card-2-col": "http://localhost:6006/iframe.html?id=components-cards--event-card-2-col",
-    "components-cards--event-card-3-col": "http://localhost:6006/iframe.html?id=components-cards--event-card-3-col",
-    "components-cards--event-card-4-col": "http://localhost:6006/iframe.html?id=components-cards--event-card-4-col",
+    "components-button--button": "http://localhost:6006/iframe.html?id=components-button--button",
+    "components-button--button-secondary": "http://localhost:6006/iframe.html?id=components-button--button-secondary",
+    "components-button--button-tertiary": "http://localhost:6006/iframe.html?id=components-button--button-tertiary",
+    "components-button--button-size": "http://localhost:6006/iframe.html?id=components-button--button-size",
+    "components-button--button-expanded": "http://localhost:6006/iframe.html?id=components-button--button-expanded",
+    "components-button--button-icon": "http://localhost:6006/iframe.html?id=components-button--button-icon",
+    "components-cards-card--card": "http://localhost:6006/iframe.html?id=components-cards-card--card",
+    "components-cards-card--text": "http://localhost:6006/iframe.html?id=components-cards-card--text",
+    "components-cards-card--image": "http://localhost:6006/iframe.html?id=components-cards-card--image",
+    "components-cards-card--icon": "http://localhost:6006/iframe.html?id=components-cards-card--icon",
+    "components-cards-card--icon-nav": "http://localhost:6006/iframe.html?id=components-cards-card--icon-nav",
+    "components-cards-pane--pane": "http://localhost:6006/iframe.html?id=components-cards-pane--pane",
+    "components-cards-pane--image": "http://localhost:6006/iframe.html?id=components-cards-pane--image",
+    "components-cards-pane--text": "http://localhost:6006/iframe.html?id=components-cards-pane--text",
+    "components-cards-pane--text-shaded": "http://localhost:6006/iframe.html?id=components-cards-pane--text-shaded",
+    "components-cards-pane--icon": "http://localhost:6006/iframe.html?id=components-cards-pane--icon",
+    "components-cards-pane--icon-large": "http://localhost:6006/iframe.html?id=components-cards-pane--icon-large",
+    "components-cards-pane--icon-shaded": "http://localhost:6006/iframe.html?id=components-cards-pane--icon-shaded",
+    "components-cards-story-card--story-card": "http://localhost:6006/iframe.html?id=components-cards-story-card--story-card",
+    "components-cards-story-card--news-card": "http://localhost:6006/iframe.html?id=components-cards-story-card--news-card",
+    "components-cards-story-card--event-card": "http://localhost:6006/iframe.html?id=components-cards-story-card--event-card",
     "components-footer--footer": "http://localhost:6006/iframe.html?id=components-footer--footer",
     "components-form-controls--input-text": "http://localhost:6006/iframe.html?id=components-form-controls--input-text",
     "components-form-controls--input-text-alt": "http://localhost:6006/iframe.html?id=components-form-controls--input-text-alt",
@@ -114,16 +108,16 @@
     "components-header--basic-header": "http://localhost:6006/iframe.html?id=components-header--basic-header",
     "components-header--search-global": "http://localhost:6006/iframe.html?id=components-header--search-global",
     "components-header--search-local": "http://localhost:6006/iframe.html?id=components-header--search-local",
-    "components-hero-basic--hero-basic": "http://localhost:6006/iframe.html?id=components-hero-basic--hero-basic",
-    "components-hero-basic--basic": "http://localhost:6006/iframe.html?id=components-hero-basic--basic",
-    "components-hero-basic--program": "http://localhost:6006/iframe.html?id=components-hero-basic--program",
-    "components-hero-basic--plan": "http://localhost:6006/iframe.html?id=components-hero-basic--plan",
-    "components-hero--hero": "http://localhost:6006/iframe.html?id=components-hero--hero",
+    "components-heros-hero-basic--hero-basic": "http://localhost:6006/iframe.html?id=components-heros-hero-basic--hero-basic",
+    "components-heros-hero-basic--basic": "http://localhost:6006/iframe.html?id=components-heros-hero-basic--basic",
+    "components-heros-hero-basic--program": "http://localhost:6006/iframe.html?id=components-heros-hero-basic--program",
+    "components-heros-hero-basic--plan": "http://localhost:6006/iframe.html?id=components-heros-hero-basic--plan",
+    "components-heros-hero--hero": "http://localhost:6006/iframe.html?id=components-heros-hero--hero",
     "components-hero--home": "http://localhost:6006/iframe.html?id=components-hero--home",
-    "components-hero--level-1": "http://localhost:6006/iframe.html?id=components-hero--level-1",
-    "components-hero--level-2": "http://localhost:6006/iframe.html?id=components-hero--level-2",
+    "components-heros-hero--home": "http://localhost:6006/iframe.html?id=components-heros-hero--home",
+    "components-heros-hero--level-1": "http://localhost:6006/iframe.html?id=components-heros-hero--level-1",
+    "components-heros-hero--level-2": "http://localhost:6006/iframe.html?id=components-heros-hero--level-2",
     "components-icon--icon": "http://localhost:6006/iframe.html?id=components-icon--icon",
-    "components-lists--all": "http://localhost:6006/iframe.html?id=components-lists--all",
     "components-loading-spinner--loading-spinner": "http://localhost:6006/iframe.html?id=components-loading-spinner--loading-spinner",
     "components-loading-spinner--loading-spinner-light": "http://localhost:6006/iframe.html?id=components-loading-spinner--loading-spinner-light",
     "components-loading-spinner--loading-spinner-small": "http://localhost:6006/iframe.html?id=components-loading-spinner--loading-spinner-small",
@@ -156,10 +150,26 @@
     "components-tabs--tabs-full-width": "http://localhost:6006/iframe.html?id=components-tabs--tabs-full-width",
     "components-tabs--tabs-small": "http://localhost:6006/iframe.html?id=components-tabs--tabs-small",
     "components-tabs--tabs-reversed": "http://localhost:6006/iframe.html?id=components-tabs--tabs-reversed",
+    "components-colour--brand": "http://localhost:6006/iframe.html?id=components-colour--brand",
+    "components-colour--text": "http://localhost:6006/iframe.html?id=components-colour--text",
+    "components-colour--link": "http://localhost:6006/iframe.html?id=components-colour--link",
+    "components-colour--neutral": "http://localhost:6006/iframe.html?id=components-colour--neutral",
+    "components-colour--status": "http://localhost:6006/iframe.html?id=components-colour--status",
+    "components-colour--purple": "http://localhost:6006/iframe.html?id=components-colour--purple",
+    "components-colour--grey": "http://localhost:6006/iframe.html?id=components-colour--grey",
+    "components-colour--blackandwhite": "http://localhost:6006/iframe.html?id=components-colour--blackandwhite",
+    "components-colour--utility": "http://localhost:6006/iframe.html?id=components-colour--utility",
+    "components-colour--error": "http://localhost:6006/iframe.html?id=components-colour--error",
+    "components-colour--warning": "http://localhost:6006/iframe.html?id=components-colour--warning",
+    "components-colour--success": "http://localhost:6006/iframe.html?id=components-colour--success",
+    "components-lists--all": "http://localhost:6006/iframe.html?id=components-lists--all",
+    "patterns-basic-page--basic-page": "http://localhost:6006/iframe.html?id=patterns-basic-page--basic-page",
     "patterns-form-validation--empty-form-submit-example": "http://localhost:6006/iframe.html?id=patterns-form-validation--empty-form-submit-example",
     "patterns-form-validation--password-form": "http://localhost:6006/iframe.html?id=patterns-form-validation--password-form",
-    "patterns-basic-page--basic-page": "http://localhost:6006/iframe.html?id=patterns-basic-page--basic-page",
     "patterns-kitchen-sink--kitchen-sink": "http://localhost:6006/iframe.html?id=gallery-examples-kitchen-sink--kitchen-sink",
+    "templates-home--home": "http://localhost:6006/iframe.html?id=templates-home--home",
+    "templates-level-1--level-1": "http://localhost:6006/iframe.html?id=templates-level-1--level-1",
+    "templates-level-2--level-2": "http://localhost:6006/iframe.html?id=templates-level-2--level-2",
     "deliverables-uq-maps-1-live-data-indicator--live-data-indicator": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-1-live-data-indicator--live-data-indicator",
     "deliverables-uq-maps-1-live-data-indicator--live-data-indicator-variants": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-1-live-data-indicator--live-data-indicator-variants",
     "deliverables-uq-maps-2-search-field--search-field": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-2-search-field--search-field",
@@ -177,9 +187,6 @@
     "deliverables-uq-maps-5-slide-drawer--expanded": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-5-slide-drawer--expanded",
     "deliverables-uq-maps-6-app-info-drawer--closed": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-6-app-info-drawer--closed",
     "deliverables-uq-maps-6-app-info-drawer--open": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-6-app-info-drawer--open",
-    "templates-home--home": "http://localhost:6006/iframe.html?id=templates-home--home",
-    "templates-level-1--level-1": "http://localhost:6006/iframe.html?id=templates-level-1--level-1",
-    "templates-level-2--level-2": "http://localhost:6006/iframe.html?id=templates-level-2--level-2",
     "deprecated-footer--footer": "http://localhost:6006/iframe.html?id=legacy-footer--footer",
     "deprecated-header--header": "http://localhost:6006/iframe.html?id=legacy-header--header",
     "deprecated-grid--golden": "http://localhost:6006/iframe.html?id=deprecated-grid--golden",
@@ -196,7 +203,9 @@
     "deprecated-grid--flexible-1": "http://localhost:6006/iframe.html?id=deprecated-grid--flexible-1",
     "deprecated-grid--flexible-2": "http://localhost:6006/iframe.html?id=deprecated-grid--flexible-2",
     "deprecated-grid--flexible-full-width": "http://localhost:6006/iframe.html?id=deprecated-grid--flexible-full-width",
-    "deprecated-grid--layout-container": "http://localhost:6006/iframe.html?id=deprecated-grid--layout-container"
+    "deprecated-grid--layout-container": "http://localhost:6006/iframe.html?id=deprecated-grid--layout-container",
+    "deprecated-side-nav--side-nav-single-level": "http://localhost:6006/iframe.html?id=deprecated-side-nav--side-nav-single-level",
+    "deprecated-side-nav--side-nav-multi-level": "http://localhost:6006/iframe.html?id=deprecated-side-nav--side-nav-multi-level"
   },
   "viewports": {
     "mobile": { "width": 375, "height": 932 },
