--- a/scripts/screenshot.config.json
+++ b/scripts/screenshot.config.json
@@ -7,6 +7,7 @@
     "layout-card-grid--cards-example": "http://localhost:6006/iframe.html?id=layout-card-grid--cards-example",
     "layout-card-grid--panes-example": "http://localhost:6006/iframe.html?id=layout-card-grid--panes-example",
     "layout-card-grid--story-card-example": "http://localhost:6006/iframe.html?id=layout-card-grid--story-card-example",
+    "layout-card-grid--card-grid-1-per-row-example": "http://localhost:6006/iframe.html?id=layout-card-grid--card-grid-1-per-row-example",
     "components-body-elements--title": "http://localhost:6006/iframe.html?id=components-body-elements--title",
     "components-body-elements--header": "http://localhost:6006/iframe.html?id=components-body-elements--header",
     "components-body-elements--text-block": "http://localhost:6006/iframe.html?id=components-body-elements--text-block",
