--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -53,6 +53,7 @@
     "@uqds/header-legacy": "^0.1.4-alpha.0",
     "@uqds/hero": "^1.0.4-alpha.0",
     "@uqds/icon": "^0.0.19-alpha.0",
+    "@uqds/image": "^1.0.0-alpha.0",
     "@uqds/layout": "^1.0.4-alpha.0",
     "@uqds/lists": "^0.1.4-alpha.0",
     "@uqds/loading-spinner": "^0.1.4-alpha.0",
