--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -51,6 +51,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.4-alpha.0"
+    "@uqds/core": "^1.2.4-alpha.0",
+    "copy-to-clipboard": "^3.3.3"
   }
 }
