--- a/scripts/screenshot.config.json
+++ b/scripts/screenshot.config.json
@@ -52,12 +52,13 @@
     "components-blockquote--blockquote": "http://localhost:6006/iframe.html?id=components-blockquote--blockquote",
     "components-blockquote--light": "http://localhost:6006/iframe.html?id=components-blockquote--light",
     "components-breadcrumb--breadcrumb": "http://localhost:6006/iframe.html?id=components-breadcrumb--breadcrumb",
-    "components-button--button": "http://localhost:6006/iframe.html?id=components-button--button",
-    "components-button--button-secondary": "http://localhost:6006/iframe.html?id=components-button--button-secondary",
-    "components-button--button-tertiary": "http://localhost:6006/iframe.html?id=components-button--button-tertiary",
-    "components-button--button-size": "http://localhost:6006/iframe.html?id=components-button--button-size",
-    "components-button--button-expanded": "http://localhost:6006/iframe.html?id=components-button--button-expanded",
-    "components-button--button-icon": "http://localhost:6006/iframe.html?id=components-button--button-icon",
+    "components-button--primary": "http://localhost:6006/iframe.html?id=components-button--primary",
+    "components-button--secondary": "http://localhost:6006/iframe.html?id=components-button--secondary",
+    "components-button--tertiary": "http://localhost:6006/iframe.html?id=components-button--tertiary",
+    "components-button--size": "http://localhost:6006/iframe.html?id=components-button--size",
+    "components-button--expanded": "http://localhost:6006/iframe.html?id=components-button--expanded",
+    "components-button--icon": "http://localhost:6006/iframe.html?id=components-button--icon",
+    "components-copybutton--copy-button": "http://localhost:6006/iframe.html?id=components-copybutton--copy-button",
     "components-cards-card--card": "http://localhost:6006/iframe.html?id=components-cards-card--card",
     "components-cards-card--text": "http://localhost:6006/iframe.html?id=components-cards-card--text",
     "components-cards-card--image": "http://localhost:6006/iframe.html?id=components-cards-card--image",
