--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -25,15 +25,9 @@ jobs:
       - name: "📦️ Install dependencies"
         run: npm install
 
-      - name: "Build Storybook"
-        run: |
-          npm run build-storybook
-        working-directory: packages/storybook-html/
-
       - name: "Serve Storybook"
         run: |
-          npx http-server storybook-static --port 6006 &
-        working-directory: packages/storybook-html/
+          npm run storybook &
 
       - name: "Create screenshots"
         run: |
