--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -57,6 +57,13 @@ jobs:
         run: |
           npm run reg-suit run --update-screenshots
 
+      - name: Configure AWS Credentials for S3 Sync Preview
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_TOOLS }}
+          aws-region: ap-southeast-2
+          role-session-name: GitHubActions-S3Sync-Preview-${{ github.run_id }}
+
       - name: "Sync to preview environment"
         uses: jakejarvis/s3-sync-action@master
         with:
