--- a/.github/workflows/publish-sb.yml
+++ b/.github/workflows/publish-sb.yml
@@ -1,4 +1,9 @@
 name: Publish Storybook
+
+permissions:
+  id-token: write
+  contents: read
+  
 on:
   push:
     branches:
@@ -24,25 +29,29 @@ jobs:
           npm run build-storybook
         working-directory: packages/storybook-html/
 
+      - name: Configure AWS Credentials for Staging
+        if: ${{ github.ref_name == 'master' }}
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_STAGING }}
+          aws-region: ap-southeast-2
+          role-session-name: GitHubActions-S3Sync-Staging-${{ github.run_id }}
+
       - name: "Sync master to staging environment"
         if: ${{ github.ref_name == 'master' }}
-        uses: jakejarvis/s3-sync-action@master
+        run: |
+          aws s3 sync packages/storybook-html/storybook-static s3://${{ secrets.AWS_S3_BUCKET_STAGING }} --delete --follow-symlinks --acl public-read
+
+      - name: Configure AWS Credentials for Production
+        if: ${{ github.ref_name == 'releases' }}
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          args: --follow-symlinks --delete
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_STAGING }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_STAGING_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_STAGING_KEY }}
-          SOURCE_DIR: 'packages/storybook-html/storybook-static'
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_PRODUCTION }}
+          aws-region: ap-southeast-2
+          role-session-name: GitHubActions-S3Sync-Production-${{ github.run_id }}
 
       - name: "Sync releases to Production environment"
         if: ${{ github.ref_name == 'releases' }}
-        uses: jakejarvis/s3-sync-action@master
-        with:
-           args: --follow-symlinks --delete
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_PRODUCTION }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_PRODUCTION_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_PRODUCTION_KEY }}
-          SOURCE_DIR: 'packages/storybook-html/storybook-static'
+        run: |
+          aws s3 sync packages/storybook-html/storybook-static s3://${{ secrets.AWS_S3_BUCKET_PRODUCTION }} --delete --follow-symlinks --acl public-read
 
