--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -1,5 +1,9 @@
 name: Visual Regression Testing and preview environment
 
+permissions:
+  id-token: write
+  contents: read
+
 on:
   push:
     branches:
@@ -39,25 +43,30 @@ jobs:
         run: |
           npm run update-screenshots
 
+      - name: Configure AWS Credentials for Reg-Suit
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_TOOLS }}
+          aws-region: ap-southeast-2
+          role-session-name: GitHubActions-RegSuit-${{ github.run_id }}
+
       - name: Run visual regression
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           UQDS_PERSONAL_ACCESS_TOKEN: ${{ secrets.UQDS_PERSONAL_ACCESS_TOKEN }}
           AWS_REGION: 'ap-southeast-2'
         run: |
           npm run reg-suit run --update-screenshots
 
-      - name: "Sync to preview environment"
-        uses: jakejarvis/s3-sync-action@master
+      - name: Configure AWS Credentials for S3 Sync Preview
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          args: --acl public-read --follow-symlinks
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_TOOLS }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          SOURCE_DIR: 'packages/storybook-html/storybook-static'
-          DEST_DIR: storybook-preview/${{ github.run_id }}
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_TOOLS }}
+          aws-region: ap-southeast-2
+          role-session-name: GitHubActions-S3Sync-Preview-${{ github.run_id }}
+
+      - name: "Sync to preview environment"
+        run: |
+          aws s3 sync packages/storybook-html/storybook-static s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/storybook-preview/${{ github.run_id }} --acl public-read --follow-symlinks
 
       - name: "Add link to storybook preview in comments"
         uses: marocchino/sticky-pull-request-comment@v2
