--- a/scripts/screenshot.config.json
+++ b/scripts/screenshot.config.json
@@ -1,5 +1,17 @@
 {
   "uris": {
+    "core-colour--brand": "http://localhost:6006/iframe.html?id=core-colour--brand",
+    "core-colour--text": "http://localhost:6006/iframe.html?id=core-colour--text",
+    "core-colour--link": "http://localhost:6006/iframe.html?id=core-colour--link",
+    "core-colour--neutral": "http://localhost:6006/iframe.html?id=core-colour--neutral",
+    "core-colour--status": "http://localhost:6006/iframe.html?id=core-colour--status",
+    "core-colour--purple": "http://localhost:6006/iframe.html?id=core-colour--purple",
+    "core-colour--grey": "http://localhost:6006/iframe.html?id=core-colour--grey",
+    "core-colour--blackandwhite": "http://localhost:6006/iframe.html?id=core-colour--blackandwhite",
+    "core-colour--utility": "http://localhost:6006/iframe.html?id=core-colour--utility",
+    "core-colour--error": "http://localhost:6006/iframe.html?id=core-colour--error",
+    "core-colour--warning": "http://localhost:6006/iframe.html?id=core-colour--warning",
+    "core-colour--success": "http://localhost:6006/iframe.html?id=core-colour--success",
     "layout-container--container": "http://localhost:6006/iframe.html?id=layout-container--container",
     "layout-page-layouts-sidebar--sidebar": "http://localhost:6006/iframe.html?id=layout-page-layouts-sidebar--sidebar",
     "layout-page-layouts-sidebar--local-nav-example": "http://localhost:6006/iframe.html?id=layout-page-layouts-sidebar--local-nav-example",
@@ -101,7 +113,7 @@
     "components-form-controls--input-password": "http://localhost:6006/iframe.html?id=components-form-controls--input-password",
     "components-form-error-summary--error-summary": "http://localhost:6006/iframe.html?id=components-form-error-summary--error-summary",
     "components-form-searchinput--search-input": "http://localhost:6006/iframe.html?id=components-form-searchinput--search-input",
-    "components-form-searchinput--wide": "http://localhost:6006/iframe.html?id=components-form-searchinput--wide",
+    "components-form-searchinput--expand": "http://localhost:6006/iframe.html?id=components-form-searchinput--expand",
     "components-grid-menu--grid-menu-default": "http://localhost:6006/iframe.html?id=components-grid-menu--grid-menu-default",
     "components-grid-menu--grid-menu-description": "http://localhost:6006/iframe.html?id=components-grid-menu--grid-menu-description",
     "components-grid-menu--grid-menu-dark-text": "http://localhost:6006/iframe.html?id=components-grid-menu--grid-menu-dark-text",
@@ -119,7 +131,6 @@
     "components-heros-hero-basic--program": "http://localhost:6006/iframe.html?id=components-heros-hero-basic--program",
     "components-heros-hero-basic--plan": "http://localhost:6006/iframe.html?id=components-heros-hero-basic--plan",
     "components-heros-hero--hero": "http://localhost:6006/iframe.html?id=components-heros-hero--hero",
-    "components-hero--home": "http://localhost:6006/iframe.html?id=components-hero--home",
     "components-heros-hero--home": "http://localhost:6006/iframe.html?id=components-heros-hero--home",
     "components-heros-hero--level-1": "http://localhost:6006/iframe.html?id=components-heros-hero--level-1",
     "components-heros-hero--level-2": "http://localhost:6006/iframe.html?id=components-heros-hero--level-2",
@@ -138,7 +149,6 @@
     "components-pagination--pagination-pages-more-first": "http://localhost:6006/iframe.html?id=components-pagination-pagination--pages-more-first",
     "components-pagination--pages-more-last": "http://localhost:6006/iframe.html?id=components-pagination-pagination--pages-more-last",
     "components-pagination--pages-more-middle": "http://localhost:6006/iframe.html?id=components-pagination-pagination--pages-more-middle",
-    "components-pane--all": "http://localhost:6006/iframe.html?id=components-pane--all",
     "components-pill--link": "http://localhost:6006/iframe.html?id=components-pill-pill--link",
     "components-pill--checkbox": "http://localhost:6006/iframe.html?id=components-pill-pill--checkbox",
     "components-pill--radio": "http://localhost:6006/iframe.html?id=components-pill-pill--radio",
@@ -151,8 +161,6 @@
     "components-progression--progression-initial": "http://localhost:6006/iframe.html?id=components-progression--progression-initial",
     "components-progression--progression-middle": "http://localhost:6006/iframe.html?id=components-progression--progression-middle",
     "components-progression--progression-final": "http://localhost:6006/iframe.html?id=components-progression--progression-final",
-    "components-side-nav--side-nav-single-level": "http://localhost:6006/iframe.html?id=components-side-nav--side-nav-single-level",
-    "components-side-nav--side-nav-multi-level": "http://localhost:6006/iframe.html?id=components-side-nav--side-nav-multi-level",
     "components-site-header--site-header-with-subnav": "http://localhost:6006/iframe.html?id=components-site-header--site-header-with-subnav",
     "components-site-header--site-header-without-subnav": "http://localhost:6006/iframe.html?id=components-site-header--site-header-without-subnav",
     "components-table--table": "http://localhost:6006/iframe.html?id=components-table--table",
@@ -168,23 +176,10 @@
     "components-tabs--tabs-full-width": "http://localhost:6006/iframe.html?id=components-tabs--tabs-full-width",
     "components-tabs--tabs-small": "http://localhost:6006/iframe.html?id=components-tabs--tabs-small",
     "components-tabs--tabs-reversed": "http://localhost:6006/iframe.html?id=components-tabs--tabs-reversed",
-    "components-colour--brand": "http://localhost:6006/iframe.html?id=components-colour--brand",
-    "components-colour--text": "http://localhost:6006/iframe.html?id=components-colour--text",
-    "components-colour--link": "http://localhost:6006/iframe.html?id=components-colour--link",
-    "components-colour--neutral": "http://localhost:6006/iframe.html?id=components-colour--neutral",
-    "components-colour--status": "http://localhost:6006/iframe.html?id=components-colour--status",
-    "components-colour--purple": "http://localhost:6006/iframe.html?id=components-colour--purple",
-    "components-colour--grey": "http://localhost:6006/iframe.html?id=components-colour--grey",
-    "components-colour--blackandwhite": "http://localhost:6006/iframe.html?id=components-colour--blackandwhite",
-    "components-colour--utility": "http://localhost:6006/iframe.html?id=components-colour--utility",
-    "components-colour--error": "http://localhost:6006/iframe.html?id=components-colour--error",
-    "components-colour--warning": "http://localhost:6006/iframe.html?id=components-colour--warning",
-    "components-colour--success": "http://localhost:6006/iframe.html?id=components-colour--success",
     "components-lists--all": "http://localhost:6006/iframe.html?id=components-lists--all",
     "patterns-basic-page--basic-page": "http://localhost:6006/iframe.html?id=patterns-basic-page--basic-page",
     "patterns-form-validation--empty-form-submit-example": "http://localhost:6006/iframe.html?id=patterns-form-validation--empty-form-submit-example",
     "patterns-form-validation--password-form": "http://localhost:6006/iframe.html?id=patterns-form-validation--password-form",
-    "patterns-kitchen-sink--kitchen-sink": "http://localhost:6006/iframe.html?id=gallery-examples-kitchen-sink--kitchen-sink",
     "templates-news-article--article": "http://localhost:6006/iframe.html?id=templates-news-article--article",
     "templates-news-home--home": "http://localhost:6006/iframe.html?id=templates-news-home--home",
     "templates-home--home": "http://localhost:6006/iframe.html?id=templates-home--home",
@@ -207,8 +202,8 @@
     "deliverables-uq-maps-5-slide-drawer--expanded": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-5-slide-drawer--expanded",
     "deliverables-uq-maps-6-app-info-drawer--closed": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-6-app-info-drawer--closed",
     "deliverables-uq-maps-6-app-info-drawer--open": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-6-app-info-drawer--open",
-    "deprecated-footer--footer": "http://localhost:6006/iframe.html?id=legacy-footer--footer",
-    "deprecated-header--header": "http://localhost:6006/iframe.html?id=legacy-header--header",
+    "deprecated-footer--footer": "http://localhost:6006/iframe.html?id=deprecated-footer--footer",
+    "deprecated-header--header": "http://localhost:6006/iframe.html?id=deprecated-header--header",
     "deprecated-grid--golden": "http://localhost:6006/iframe.html?id=deprecated-grid--golden",
     "deprecated-grid--halves": "http://localhost:6006/iframe.html?id=deprecated-grid--halves",
     "deprecated-grid--thirds": "http://localhost:6006/iframe.html?id=deprecated-grid--thirds",
