--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
       - releases
+    paths-ignore:
+      - '**/package.json'
+      - '**/CHANGELOG.md'
 
 jobs:
   publish:
