--- a/lerna.json
+++ b/lerna.json
@@ -6,10 +6,12 @@
       "npmClientArgs": ["--no-package-lock"]
     },
     "publish": {
+      "ignoreChanges": ["**/*.md", "**/package.json", "**/package-lock.json"],
       "conventionalCommits": true,
       "allowBranch": ["master", "releases"]
     },
     "version": {
+      "ignoreChanges": ["**/*.md", "**/package.json", "**/package-lock.json"],
       "conventionalCommits": true,
       "allowBranch": ["master", "releases"],
       "message": "chore(release):Publish"
